# AeroSynthX

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  DEFERRED.md  DOCUMENTATION_WORKFLOW.md  ENGINEERING_WORKFLOW.md  FEASIBILITY.md  GITHUB_WORKFLOW.md  RISKS.md  ROADMAP.md  VERSIONING.md
docs/phases/: PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_13.md  PHASE_14.md  PHASE_15.md  PHASE_16.md  PHASE_17.md  PHASE_18.md  PHASE_19.md  PHASE_2.md  PHASE_20.md  PHASE_21.md  PHASE_22.md  PHASE_23.md  PHASE_24.md  PHASE_25.md  PHASE_26.md  PHASE_27.md  PHASE_28.md  PHASE_29.md  PHASE_3.md  PHASE_30.md  PHASE_31.md  PHASE_32.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
src/aerosynthx/: __init__.py  task_queue.py
src/aerosynthx/api/: __init__.py  app.py  ratelimit.py  schemas.py  security.py  sse.py
src/aerosynthx/api/static/: app.js  index.html  styles.css
src/aerosynthx/geometry/: __init__.py  airfoil.py  curves.py  custom.py  errors.py  exporters.py  naca4.py  naca5.py  validators.py  visualize.py  wing.py
src/aerosynthx/intent/: __init__.py  errors.py  llm.py  offline.py  parser.py  schemas.py
src/aerosynthx/intent/providers/: __init__.py  openai.py
src/aerosynthx/meshing/: __init__.py  snappy.py  stl_exporter.py
src/aerosynthx/observability/: __init__.py  logging.py  metrics.py
src/aerosynthx/openfoam/: __init__.py  case.py  errors.py  flow_state.py  runner.py  validators.py
src/aerosynthx/openfoam/templates/incompressible_simple_komegaSST/: Allclean.jinja  Allrun.jinja
src/aerosynthx/openfoam/templates/incompressible_simple_komegaSST/0/: U.jinja  k.jinja  omega.jinja  p.jinja
src/aerosynthx/openfoam/templates/incompressible_simple_komegaSST/constant/: transportProperties.jinja
src/aerosynthx/openfoam/templates/incompressible_simple_komegaSST/system/: blockMeshDict.jinja  controlDict.jinja
src/aerosynthx/optimizer/: __init__.py  engine.py  report.py  runner.py  schemas.py  tasks.py
src/aerosynthx/physics/: __init__.py  aero.py  atmosphere.py  errors.py  units.py
src/aerosynthx/study/: __init__.py  report.py  runner.py  schemas.py  tasks.py
src/aerosynthx/workflow/: __init__.py  artifacts.py  cancellation.py  cli.py  db.py  errors.py  locking.py  pipeline.py  progress.py  report.py  retention.py  stages.py  tasks.py
src/aerosynthx/xfoil/: __init__.py  errors.py  parser.py  runner.py
tests/: conftest.py  test_smoke.py
tests/api/: __init__.py  test_app.py  test_ratelimit.py  test_security.py  test_sse.py
tests/geometry/: test_custom.py  test_errors.py  test_exporters.py  test_naca4.py  test_naca5.py  test_validators.py  test_visualize.py  test_wing.py
tests/intent/: test_errors.py  test_offline.py  test_parser.py  test_schemas.py
tests/intent/providers/: __init__.py  test_openai.py
tests/observability/: __init__.py  test_logging.py  test_metrics.py
tests/openfoam/: test_case.py  test_errors.py  test_flow_state.py  test_runner.py  test_validators.py
tests/optimizer/: test_runner.py  test_schemas.py
tests/perf/: __init__.py  test_budget.py
tests/physics/: test_aero.py  test_atmosphere.py  test_errors.py  test_units.py
tests/study/: test_runner.py  test_schemas.py
tests/workflow/: __init__.py  test_artifacts.py  test_cancellation.py  test_cli.py  test_db.py  test_errors.py  test_locking.py  test_pipeline.py  test_progress.py  test_report.py  test_retention.py  test_stages.py
tests/xfoil/: test_parser.py  test_runner.py  test_xfoil_integration.py
