[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aerosynthx"
version = "1.5.0"
description = "AI-assisted aerodynamic design and CFD orchestration platform."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hasnain Raza" }]
keywords = ["aerodynamics", "cfd", "openfoam", "airfoil", "engineering"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies grow per phase.
# Phase 1 introduces numpy + pint (physics core).
# Phase 2 introduces matplotlib (airfoil rendering).
# Phase 3 introduces pydantic (intent schemas).
dependencies = [
    "numpy>=1.26",
    "pint>=0.23",
    "matplotlib>=3.8",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
aerosynthx = "aerosynthx.workflow.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/hasnainrazaa03/AeroSynthX"
Issues = "https://github.com/hasnainrazaa03/AeroSynthX/issues"
Changelog = "https://github.com/hasnainrazaa03/AeroSynthX/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aerosynthx"]

[tool.hatch.build.targets.sdist]
include = ["src/aerosynthx", "README.md", "LICENSE", "CHANGELOG.md"]

# ----------------------------- Ruff -----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplifications
    "C4",            # comprehensions
    "RET",           # return rules
    "RUF",           # ruff-specific
    "N",             # naming
    "D",             # docstrings (relaxed below)
]
ignore = [
    "D100", "D104", "D107",  # module/package/__init__ docstrings: not yet
    "D203", "D213",          # docstring style choice
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",        # docstrings not required in tests
    "S101",     # assert allowed in tests
    "N802",     # test names may use domain capitals (e.g. test_R_must_be_positive)
    "N803",     # argument names may use domain capitals (e.g. T, P, L)
    "N812",     # lowercase imports may be aliased to capitals
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------- Mypy -----------------------------
[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_decorators = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

# ----------------------------- Pytest ---------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "solver: marks tests that require an OpenFOAM solver installation",
]

# ----------------------------- Coverage -------------------------
[tool.coverage.run]
branch = true
source = ["aerosynthx"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Phase 1 enforces a coverage floor on the physics core via CI.
fail_under = 90

[tool.coverage.paths]
source = ["src/aerosynthx", "*/site-packages/aerosynthx"]
