[tool.poetry]
name = "aerosynthx"
version = "1.24.0"
description = "AI-assisted aerodynamic design and CFD orchestration platform."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pint = ">=0.23,<0.26"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
jinja2 = "^3.1.3"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29,<0.50"}
python-multipart = "^0.0.9"
celery = {extras = ["redis"], version = "^5.4.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aerosynthx = "aerosynthx.workflow.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "C4", "T10", "T20", "Q", "ISC", "ICN", "INP", "PIE", "PYI", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["aerosynthx/openfoam/templates/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --cov=src/aerosynthx --cov-report=term-missing --cov-fail-under=90"
